# PHO_Project_EsaveGo_J_Stutz

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: FinduEye-SDK.cmake
conf/innerTrack/: vel_points.csv
conf/outerTrack/: vel_points.csv
conf/outerTrack2/: vel_points.csv
inc/: KDTree.hpp  camera.hpp  car_controller.hpp  csv_handler.hpp  detectTrack.hpp  keystate.hpp  mem_handler.hpp  serialSTM32.hpp
prop/: camConfig.ini  cameraSettings.json  cameraSettingsTrackDetection.json  dataPoints.csv  splineData.csv
py/: app.py  clustering.py  max_curve_speed.py  ransac2d_solution.py  test.py  trackInterpolation.py
py/modules/: csv_handler.py  point_sorter.py  sequential_PCA.py  spline_interpolation.py  vel_editor.py
src/: KDTree.cpp  camera.cpp  car_controller.cpp  csv_handler.cpp  detectTrack.cpp  keystate.cpp  main.cpp  mem_handler.cpp  serialSTM32.cpp  test.cpp
util/: biggestContour.cpp  detectTrackNaive.cpp  keyboardListen.cpp  keystate.cpp  parameterSet.cpp  slider.cpp  trackdetectingwhileloop.cpp
